tools/crates/vendor/toml_edit/tests/fixtures/invalid/local-datetime/minute-over.stderr
TOML parse error at line 2, column 19
  |
2 | d = 2006-01-01T00:60:00
  |                   ^
invalid date-time
value is out of range
